--- a/login_page/src/containers/Login.css
+++ b/login_page/src/containers/Login.css
@@ -1,10 +1,22 @@
-@media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      padding: 60px 0;  
+ 
     }
   
     .Login form {
       margin: 0 auto;
-      max-width: 320px;
-    }
-  }
+      max-width: 200px;
+        }
+   
+    #buttonLogin {
+      background-color: #FF720A; /* orange*/
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+     }
+  
+
