--- a/login_page/src/containers/Login.css
+++ b/login_page/src/containers/Login.css
@@ -1,9 +1,7 @@
-    .Login {
-      padding: 60px 0;  
- 
-    }
+   
   
     .Login form {
+      
       margin: 0 auto;
       max-width: 200px;
         }
@@ -18,5 +16,17 @@
       display: inline-block;
       font-size: 16px;
      }
+
+     .Login {
+      
+      width: 250px;
+      height:255px;
+      box-shadow:10px 10px 5px grey;
+      border-radius: 10px;
+      vertical-align: center;
+          
+     }
+
+
   
 
